--- a/default.css
+++ b/default.css
@@ -1,19 +1,74 @@
-html {font-family: Quicksand; background-color:#FFF2FD;}
-header {font-family:Handlee; font-size:3.5em; text-align:center; padding-bottom:30px; padding-top:15px;}
-nav {margin:-13px; left:0; right:0; border: 2px solid #CBCCAD; background-color: #E1FFB2; padding-bottom: -5px; margin-bottom:15px; height:29px; border-top:10px;}
+html {
+  font-family: 'Josefin Sans', 'Open Sans', sans-serif;
+  background-color: #FFF2FD;
+  background:
+    linear-gradient(
+      rgba(28, 18, 23, 0.7),
+      rgba(28, 18, 23, 0.7)
+      ),
+    url(imgs/AboutMe-pic-2.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: 0px -90px
+}
+
+header {
+  width:100%;
+  font-family: 'Titillium Web', sans-serif;
+  font-size:3em;
+  text-align:center;
+  margin-top: 55px;
+
+  color:white;
+}
+nav {
+  position:fixed;
+  top:8px;
+  margin:-13px;
+  left:0;
+  right:0;
+  border: 2px solid #CBCCAD;
+  background-color: #E1FFB2;
+  padding-bottom: -5px;
+  margin-bottom:15px;
+  height:48px;
+  border-top:10px;
+
+  -webkit-box-shadow: 0px 0px 15px 0px #000000;
+  -moz-box-shadow: 0px 0px 15px 0px #000000;
+  box-shadow: 0px 0px 15px 0px #000000;
+
+  background-color: rgba(1, 1, 1, 0.8);
+  color: rgba(1, 1, 1, 0.8);
+}
 ul li {font-size: 1.4em; font-weight: bolder; padding: 9%; display: inline;}
 
-a:link {color:black; text-decoration: none;}
-a:hover {color:black; text-decoration: underline;}
-a:visited {color:black; text-decoration: none;}
+a {
+  padding-left: 8px;
+}
+a:link {color:white; text-decoration: none;}
+a:hover {color:white; text-decoration: underline;}
+a:visited {color:white; text-decoration: none;}
 
 div li {padding: 0;}
 div {display: block; padding-left: 5%; position:relative; vertical-align:center;}
 div:first-child {margin-top:4px; }
 
-.sm {height:25px; width:25px; display:inline-block; float:left; margin-left:10px; padding-top:3px; }
+.sm {
+  height:27px;
+  width:27px;
+  display:inline-block;
+  float:left;
+  margin-left:10px;
+  padding-top:6px; }
 
-#bio-pic {width: 35%; margin-left:65%; position:absolute;}
+/*#bio-pic {
+  width: 35%;
+  margin-left:65%;
+  position:absolute;
+}*/
 
 
 
