--- a/blog/default-blog.css
+++ b/blog/default-blog.css
@@ -1,27 +1,57 @@
 html {font-family: Quicksand; background-color:#FFF2FD;}
-main {padding-bottom:9%;}
-header {font-family:Handlee; font-size:3.5em; text-align:center; padding-bottom:30px; padding-top:15px;}
-nav {margin:-13px; left:0; right:0; border: 2px solid #CBCCAD; background-color: #E1FFB2; padding-bottom: -5px; margin-bottom:15px; height:29px; border-top:10px;}
+
+nav {
+  position:fixed;
+  top:8px;
+  margin:-13px;
+  left:0;
+  right:0;
+  border: 2px solid #CBCCAD;
+  background-color: #E1FFB2;
+  padding-bottom: -5px;
+  margin-bottom:15px;
+  height:48px;
+  border-top:10px;
+
+  -webkit-box-shadow: 0px 0px 15px 0px #000000;
+  -moz-box-shadow: 0px 0px 15px 0px #000000;
+  box-shadow: 0px 0px 15px 0px #000000;
+
+  background-color: rgba(1, 1, 1, 0.8);
+  color: rgba(1, 1, 1, 0.8);
+}
 ul li {font-size: 1.4em; font-weight: bolder; padding: 9%; display: inline;}
 
-a:link {color:black; text-decoration: none;}
-a:hover {color:black; text-decoration: underline;}
-a:visited {color:black; text-decoration: none;}
+a {
+  padding-left: 8px;
+}
+a:link {color:white; text-decoration: none;}
+a:hover {color:white; text-decoration: underline;}
+a:visited {color:white; text-decoration: none;}
+
+main {padding-bottom:9%;}
+header {font-family:Handlee; font-size:3.5em; text-align:center; padding-bottom:30px; padding-top:15px;}
+
+
 
 div li {padding: 0;}
 div {display: block; padding-left: 5%; position:relative; vertical-align:center;}
 div:first-child {margin-top:4px; }
 
-.sm {height:25px; width:25px; display:inline-block; float:left; margin-left:10px; padding-top:3px; }
-
-#bio-pic {width: 35%; margin-left:65%; position:absolute;}
+.sm {
+  height:27px;
+  width:27px;
+  display:inline-block;
+  float:left;
+  margin-left:10px;
+  padding-top:6px; }
 
 p {margin-left:40px; margin-right:15%; margin-bottom:8px;}
 h1, h4 {padding-left:30px;}
 
 img {padding-bottom:15px; padding-top:15px;}
 
-.blog-image {width: 40%; padding-top:2%}
+.blog-image {width: auto; padding-top:2%}
 /*#left {position:relative; left:0; display:inline;} */
 /*#right {position:relative; right:0; display:inline;} */
 
