--- a/blog/default-blog.css
+++ b/blog/default-blog.css
@@ -46,7 +46,11 @@ div:first-child {margin-top:4px; }
   margin-left:10px;
   padding-top:6px; }
 
-p {margin-left:40px; margin-right:15%; margin-bottom:8px;}
+p {
+  margin-left:40px;
+  margin-right:15%;
+  margin-bottom:8px;
+}
 h1, h4 {padding-left:30px;}
 
 img {padding-bottom:15px; padding-top:15px;}
