--- a/default.css
+++ b/default.css
@@ -35,12 +35,13 @@ nav {
   margin-bottom:15px;
   height:48px;
   border-top:10px;
+  z-index:999;
 
   -webkit-box-shadow: 0px 0px 15px 0px #000000;
   -moz-box-shadow: 0px 0px 15px 0px #000000;
   box-shadow: 0px 0px 15px 0px #000000;
 
-  background-color: rgba(1, 1, 1, 0.8);
+  background-color: rgba(1, 1, 1, 1);
   color: rgba(1, 1, 1, 0.8);
 }
 ul li {font-size: 1.4em; font-weight: bolder; padding: 9%; display: inline;}
@@ -70,7 +71,30 @@ div:first-child {margin-top:4px; }
   position:absolute;
 }*/
 
+li p {
+  padding:10px;
+  background:
+    linear-gradient(
+      rgba(2, 2, 2, 0.5),
+      rgba(2, 2, 2, 0.5)
+      );
 
+  position: relative;
+  margin:auto;
+  width: 50%;
+}
+
+#blogs {
+  margin-top: 7%;
+
+}
+
+div h2 {
+  color: white;
+  position: fixed;
+  /*margin-left: -3.4%;*/
+  font-size: 2em;
+}
 
 .blog-image {width: 25%; padding-top:2%}
 /*#left {position:relative; left:0; display:inline;} */
