--- a/default.css
+++ b/default.css
@@ -100,7 +100,7 @@ div h2 {
 /*#left {position:relative; left:0; display:inline;} */
 /*#right {position:relative; right:0; display:inline;} */
 
-
+/*Contact*/
 .contact-methods {
   font-size: 22px;
   margin-left: 44px;
@@ -111,6 +111,14 @@ div h2 {
 .contact-methods a {
   color: black
 }
+
+
+.construction {
+  font-size: 22px;
+  margin-left: 44px;
+  margin-top: 100px;
+}
+
 
 /*Portfolio*/
 .wya {
